switched to enumeration
